<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_gravity="left|center_vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:src="@drawable/arrow_left_selected"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/leftArrow"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/back"
            android:layout_alignTop="@+id/back"
            android:src="@drawable/arrow_right_selected"
            android:contentDescription="@string/rightArrow"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionGo"
            android:hint="@string/urlHint"
            android:id="@+id/editText"
            android:layout_gravity="center|left"
            android:layout_toRightOf="@+id/next"
            android:layout_alignTop="@+id/back"
            android:layout_toLeftOf="@+id/go"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:id="@+id/go"
            android:layout_gravity="center"
            android:enabled="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/back"/>
    </RelativeLayout>

    <WebView
        android:id="@+id/WebEngine"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

</LinearLayout>

